--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<h1> ZACH'S SNAKE GAME</h1>
 	<P>INSTRUCTIONS GO HERE </P>
-	<button>PLAY</button>
+	<a href="game.html"><button>PLAY</button>
 
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
 </script>
