game board tweaks and player moving

--- a/game.html
+++ b/game.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ZACHS'S SNAKE GAME PAGE</title>
+	<!-- Snake title (diffrent than landing to help see where I am ) -->
+	<title>SNAKE GAME PAGE</title>
+	<!-- Linking css for game  -->
 	<link rel="stylesheet" type="text/css" href="game.css">
+	<!-- google fonts linking  -->
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-	<canvas></canvas>
-<script src="game.js"></script>
+	<h1>SNAKE</h1>
+	<!-- adding game board  -->
+	<div class="gameBoard"></div>
+	<!-- player -->
+	<div class="player"></div>
+	<!-- linking Javascript -->
+	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+	<script src="game.js"></script>
 </body>
 </html>
