--- a/game.html
+++ b/game.html
@@ -15,6 +15,9 @@
 	<!-- player -->
 	<div class="player"></div>
 	<!-- linking Javascript -->
+
+	<button id="startGame">START GAME</button>
+	<p id="count"></p>
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 	<script src="game.js"></script>
 </body>
