--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1> ZACH'S SNAKE GAME</h1>
 	<P>USE ARROW KEYS TO EAT <br> 
 	AS MUCH FOOD AS YOU CAN! </P>
-	<a href="game.html"><button>PLAY</button>
+	<a href="game.html"><button id="play">PLAY</button>
 
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
 </script>
