fixing scroll problem

--- a/game.html
+++ b/game.html
@@ -11,9 +11,11 @@
 <body>
 	<h1>SNAKE</h1>
 	<!-- adding game board  -->
-	<div class="gameBoard"></div>
+	<div id="game"></div>
 	<!-- player -->
-	<div class="player"></div>
+	<div id="snake"></div>
+	<!-- Win message div -->
+	<div id="win">YOU WON!!</div>
 	<!-- linking Javascript -->
 
 	<button id="startGame">START GAME</button>
