replay function added

--- a/game.html
+++ b/game.html
@@ -15,7 +15,9 @@
 	<!-- player -->
 	<div id="snake"></div>
 	<!-- Win message div -->
-	<div id="win">YOU WON!!</div>
+	<div id="win">YOU WON!!
+		<button id="reload">PLAY AGAIN</button>
+	</div>
 	<!-- linking Javascript -->
 
 	<button id="startGame">START GAME</button>
