snake stays in board, food appearing

--- a/game.html
+++ b/game.html
@@ -2,20 +2,21 @@
 <html>
 <head>
 	<!-- Snake title (diffrent than landing to help see where I am ) -->
-	<title>SNAKE GAME PAGE</title>
+	<title>SNAKEY GAME PAGE</title>
 	<!-- Linking css for game  -->
 	<link rel="stylesheet" type="text/css" href="game.css">
 	<!-- google fonts linking  -->
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-	<h1>SNAKE</h1>
+	<h1>SNAKEY</h1>
 	<!-- adding game board  -->
 	<div id="game"></div>
 	<!-- player -->
 	<div id="snake"></div>
 	<!-- Win message div -->
-	<div id="win">YOU WON!!
+	<!-- <div id="test"></div> -->
+	<div id="win">YOUR SCORE!!
 		<button id="reload">PLAY AGAIN</button>
 	</div>
 	<!-- linking Javascript -->
