--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ZACH'S SNAKE GAME</title>
+	<title>ZACH'S SNAKEY GAME</title>
 	<!-- Link for css and javascript *still need to add correct path -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-	<h1> ZACH'S SNAKE GAME</h1>
+	<h1> ZACH'S SNAKEY GAME</h1>
 	<P>USE ARROW KEYS TO EAT <br> 
 	AS MUCH FOOD AS YOU CAN! </P>
 	<a href="game.html"><button id="play">PLAY</button>
