can eat food and update score BUGGY

--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
 	<div id="snake"></div>
 	<!-- Win message div -->
 	<!-- <div id="test"></div> -->
-	<div id="win">YOUR SCORE!!
+	<div id="win">YOUR SCORE IS !!
 		<button id="reload">PLAY AGAIN</button>
 	</div>
 	<!-- linking Javascript -->
