--- a/game.html
+++ b/game.html
@@ -14,6 +14,8 @@
 	<div id="game"></div>
 	<!-- player -->
 	<div id="snake"></div>
+
+	<div id="white"></div>
 	<!-- Win message div -->
 	<!-- <div id="test"></div> -->
 	<div id="win">YOUR SCORE IS !!
