fixing score, number correct

--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
 	<div id="white"></div>
 	<!-- Win message div -->
 	<!-- <div id="test"></div> -->
-	<div id="win">YOUR SCORE IS !!
+	<div id="win">YOUR SCORE IS 
 		<button id="reload">PLAY AGAIN</button>
 	</div>
 	<!-- linking Javascript -->
