game logic added

--- a/game.html
+++ b/game.html
@@ -18,8 +18,13 @@
 	<div id="white"></div>
 	<!-- Win message div -->
 	<!-- <div id="test"></div> -->
-	<div id="win">YOUR SCORE IS 
+	<div id="win">PLAYER 1'S SCORE IS 
 		<button id="reload">PLAY AGAIN</button>
+	</div>
+
+	<div id="win2">PLAYER 2'S SCORE IS 
+		
+		<button id="refresh">REPLAY</button>
 	</div>
 	<!-- linking Javascript -->
 
