--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
+	<!-- Game name header  -->
 	<h1> ZACH'S SNAKEY GAME</h1>
-	<P>USE ARROW KEYS TO EAT <br> 
-	AS MUCH FOOD AS YOU CAN! </P>
+	<!-- instructions -->
+	<P> 
+		SNAKEY IS A TWO PLAYER GAME<br>
+		EACH PLAYER GETS 30 SECONDS <br>
+		TO EAT AS MUCH FOOD AS THEY CAN!
+	 </P>
+	<!-- Link button to game page -->
 	<a href="game.html"><button id="play">PLAY</button>
-
+<!-- jquery library -->
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
 </script>
 </body>
