fixed collison detection! tweaked design

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
 	<!-- Game name header  -->
-	<h1> ZACH'S SNAKEY GAME</h1>
+	<h1 class="test"> ZACH'S SNAKEY GAME</h1>
 	<!-- instructions -->
 	<P> 
 		SNAKEY IS A TWO PLAYER GAME<br>
-		EACH PLAYER GETS 30 SECONDS <br>
-		TO EAT AS MUCH FOOD AS THEY CAN!
+	<br>EACH PLAYER GETS 30 SECONDS <br>
+	<br>USE ARROW KEYS <br>
+	<br>TO EAT AS MUCH FOOD AS THEY CAN!
 	 </P>
 	<!-- Link button to game page -->
 	<a href="game.html"><button id="play">PLAY</button>
