--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<!-- Game name header -->
-	<h1>SNAKEY</h1>
+	<h1 class="title">SNAKEY</h1>
 	
 	<!-- adding game board  -->
 	<div id="game"></div>
@@ -22,13 +22,15 @@
 	<div id="white"></div>
 	
 	<!-- player 1Win message div -->
-	<div id="win">PLAYER 1'S SCORE IS 
+	<div id="win">PLAYER 1'S 
+	<br>SCORE IS 
 		<!-- play again button -->
 		<button id="reload">PLAYER 2</button>
 	</div>
 
 	<!-- player 2 win message div -->
-	<div id="win2">PLAYER 2'S SCORE IS 
+	<div id="win2">PLAYER 2'S <br>
+	<br>SCORE IS 
 		<!-- replay button. refreshes page -->
 		<button id="refresh">REPLAY</button>
 	</div>
