design and collison tweak

--- a/game.html
+++ b/game.html
@@ -23,14 +23,14 @@
 	
 	<!-- player 1Win message div -->
 	<div id="win">PLAYER 1'S 
-	<br>SCORE IS 
+	<br>SCORE IS <div id="tally"></div>
 		<!-- play again button -->
 		<button id="reload">PLAYER 2</button>
 	</div>
 
 	<!-- player 2 win message div -->
 	<div id="win2">PLAYER 2'S <br>
-	<br>SCORE IS 
+	<br>SCORE IS <div id="tally2"></div>
 		<!-- replay button. refreshes page -->
 		<button id="refresh">REPLAY</button>
 	</div>
